gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/test21096.d
version https://git-lfs.github.com/spec/v1
oid sha256:316c3fbef85227d1f3ff5108e0ba4638e62e9f561d9ca4f9849432f087368235
size 278
